data/derived/comb/progs/unify/prog4063.ml.out
Characters 28-57:
  let fixpoint (f,b) = wwhile (fun y b-> (f b, f b != b),b);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
